more work on beats -> fluent for sensor, use my own network interfaces script rather than netif

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -259,56 +259,52 @@ filter {
 
     } # if ([miscbeat][disk])
 
-    if ([miscbeat][netif]) {
+    if ([miscbeat][network]) {
       #-------------------------------------------------
-      # netif - https://docs.fluentbit.io/manual/pipeline/inputs/network-io-metrics
+      # not using fluent-bit netif input, rolled my own with /proc/net/dev and jq
 
+      mutate { id => "mutate_rename_miscbeat_network_interfaces"
+               rename => { "[miscbeat][network][interfaces]" => "[miscbeat][network][details]" } }
       ruby {
-        id => "ruby_miscbeat_netif"
-        path => "/usr/share/logstash/malcolm-ruby/dotted_hash_unflatten.rb"
-        script_params => {
-          "source" => "[miscbeat][netif]"
-          "target" => "[miscbeat][network][details]"
-        }
-      }
-      if ([miscbeat][network][details]) {
-        mutate { id => "mutate_miscbeat_remove_netif"
-                 remove_field => [ "[miscbeat][netif]" ] }
-        ruby {
-          id => "ruby_miscbeat_network_details_sum"
-          code => "
-            if interfaces = event.get('[miscbeat][network][details]') then
-              bytes_tx, bytes_rx, packets_tx, packets_rx, errors_tx, errors_rx = 0, 0, 0, 0, 0, 0
-              interfaces.each do |key, value|
-                bytes_tx = bytes_tx + value.dig('tx', 'bytes').to_i
-                bytes_rx = bytes_rx + value.dig('rx', 'bytes').to_i
-                packets_tx = packets_tx + value.dig('tx', 'packets').to_i
-                packets_rx = packets_rx + value.dig('rx', 'packets').to_i
-                errors_tx = errors_tx + value.dig('tx', 'errors').to_i
-                errors_rx = errors_rx + value.dig('rx', 'errors').to_i
-              end
-              event.set('[miscbeat][network][interface]', interfaces.keys)
-              event.set('[miscbeat][network][bytes][tx]', bytes_tx)
-              event.set('[miscbeat][network][bytes][rx]', bytes_rx)
-              event.set('[miscbeat][network][bytes][total]', bytes_tx+bytes_rx)
-              event.set('[miscbeat][network][packets][tx]', packets_tx)
-              event.set('[miscbeat][network][packets][rx]', packets_rx)
-              event.set('[miscbeat][network][packets][total]', packets_tx+packets_rx)
-              event.set('[miscbeat][network][errors][tx]', errors_tx)
-              event.set('[miscbeat][network][errors][rx]', errors_rx)
-              event.set('[miscbeat][network][errors][total]', errors_tx+errors_rx)
-            end"
-         }
-      }
+        id => "ruby_miscbeat_network_details_sum"
+        code => "
+          if interfaces = event.get('[miscbeat][network][details]') then
+            bytes_tx, bytes_rx, packets_tx, packets_rx, errors_tx, errors_rx, drop_tx, drop_rx = 0, 0, 0, 0, 0, 0, 0, 0
+            interfaces.each do |key, value|
+              bytes_tx = bytes_tx + value.dig('tx_bytes').to_i
+              bytes_rx = bytes_rx + value.dig('rx_bytes').to_i
+              packets_tx = packets_tx + value.dig('tx_packets').to_i
+              packets_rx = packets_rx + value.dig('rx_packets').to_i
+              errors_tx = errors_tx + value.dig('tx_errs').to_i
+              errors_rx = errors_rx + value.dig('rx_errs').to_i
+              drop_tx = drop_tx + value.dig('tx_drop').to_i
+              drop_rx = drop_rx + value.dig('rx_drop').to_i
+            end
+            event.set('[miscbeat][network][interface]', interfaces.keys)
+            event.set('[miscbeat][network][bytes][tx]', bytes_tx)
+            event.set('[miscbeat][network][bytes][rx]', bytes_rx)
+            event.set('[miscbeat][network][bytes][total]', bytes_tx+bytes_rx)
+            event.set('[miscbeat][network][packets][tx]', packets_tx)
+            event.set('[miscbeat][network][packets][rx]', packets_rx)
+            event.set('[miscbeat][network][packets][total]', packets_tx+packets_rx)
+            event.set('[miscbeat][network][errors][tx]', errors_tx)
+            event.set('[miscbeat][network][errors][rx]', errors_rx)
+            event.set('[miscbeat][network][errors][total]', errors_tx+errors_rx)
+            event.set('[miscbeat][network][drops][tx]', drop_tx)
+            event.set('[miscbeat][network][drops][rx]', drop_rx)
+            event.set('[miscbeat][network][drops][total]', drop_tx+drop_rx)
+          end"
+       }
 
       if (![event][hash]) {
         fingerprint {
-          id => "fingerprint_malcolm_miscbeat_netif"
+          id => "fingerprint_malcolm_miscbeat_network"
           source => [ "[host][name]",
                       "[event][module]",
                       "[miscbeat][network][bytes][total]",
                       "[miscbeat][network][packets][total]",
                       "[miscbeat][network][errors][total]",
+                      "[miscbeat][network][drops][total]",
                       "[@timestamp]" ]
           concatenate_sources => true
           # uses event.hash
@@ -318,7 +314,7 @@ filter {
         }
       }
 
-    } # if ([miscbeat][netif])
+    } # if ([miscbeat][network])
 
     if ([miscbeat][syslog]) {
       #-------------------------------------------------
