--- a/sensor-iso/interface/sensor_ctl/supervisor.d/fluentbit-metrics.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/fluentbit-metrics.conf
@@ -1,5 +1,5 @@
 [group:fluentbit-metrics]
-programs=cpu,disk,df,mem,mem_p
+programs=cpu,disk,df,mem,mem_p,netif
 
 [program:cpu]
 command=/opt/fluent-bit/bin/fluent-bit
@@ -81,4 +81,20 @@ stopasgroup=true
 killasgroup=true
 autostart=%(ENV_AUTOSTART_FLUENTBIT_METRICS)s
 
-# netif is managed in a template per-interface (fluentbit-netif.template)
+[program:netif]
+command=/opt/fluent-bit/bin/fluent-bit
+  -R /etc/fluent-bit/parsers.conf
+  -i exec
+  -p "command= /usr/local/bin/netdev-json.sh"
+  -p parser=json
+  -p Interval_Sec=%(ENV_FLUENTBIT_METRICS_INTERVAL)s
+  -o tcp://localhost:%(ENV_MISCBEAT_PORT)s
+  -p format=json_lines
+  -F nest -p Operation=nest -p Nested_under=network -p WildCard='*' -m '*'
+  -F record_modifier -p "Record=module network" -m '*'
+  -f 1
+startsecs=20
+startretries=3
+stopasgroup=true
+killasgroup=true
+autostart=%(ENV_AUTOSTART_FLUENTBIT_METRICS)s
