--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -19,6 +19,7 @@ export ARKIME_ECS_DATASET=session
 export MISCBEAT_PORT=9516
 export FLUENTBIT_METRICS_INTERVAL=30
 export FLUENTBIT_THERMAL_INTERVAL=10
+export FLUENTBIT_AIDE_INTERVAL=86400
 
 export ZEEK_LOG_PATH=/home/sensor/bro_logs
 export ZEEK_MAX_DISK_FILL=90
@@ -107,6 +108,7 @@ export ZEEK_FILE_SCAN_CAPA=false
 export AUTOSTART_ARKIME=false
 export AUTOSTART_CLAMAV_UPDATES=false
 export AUTOSTART_FILEBEAT=false
+export AUTOSTART_FLUENTBIT_AIDE=false
 export AUTOSTART_FLUENTBIT_AUDITLOG=false
 export AUTOSTART_FLUENTBIT_KMSG=false
 export AUTOSTART_FLUENTBIT_METRICS=false
