--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -69,6 +69,53 @@ filter {
       }
     }
 
+    if ([miscbeat][aide]) {
+      #-------------------------------------------------
+      # fluentbit exec of AIDE
+      # https://aide.github.io/
+
+      # parse AIDE run start_time
+      if ([miscbeat][aide][start_time]) {
+        date {
+          id => "date_beats_miscbeat_aide_start_time"
+          match => [ "[miscbeat][aide][start_time]", "yyyy-MM-dd HH:mm:ss Z" ]
+          target => "[miscbeat][aide][start_time]"
+        }
+      }
+
+      # parse AIDE run end_time and save it over @timestamp
+      if ([miscbeat][aide][end_time]) {
+        date {
+          id => "date_beats_miscbeat_aide_end_time"
+          match => [ "[miscbeat][aide][end_time]", "yyyy-MM-dd HH:mm:ss Z" ]
+          target => "[miscbeat][aide][end_time]"
+        }
+        mutate { id => "muate_replace_beats_miscbeat_aide_end_time_timestamp"
+                 replace => { "[@timestamp]" => "%{[miscbeat][aide][end_time]}" } }
+      }
+
+      if (![event][hash]) {
+        fingerprint {
+          id => "fingerprint_malcolm_miscbeat_cpu"
+          source => [ "[host][name]",
+                      "[event][module]",
+                      "[miscbeat][aide][number_of_entries][total]",
+                      "[miscbeat][aide][number_of_entries][added]",
+                      "[miscbeat][aide][number_of_entries][removed]",
+                      "[miscbeat][aide][number_of_entries][changed]",
+                      "[miscbeat][aide][outline]",
+                      "[miscbeat][aide][start_time]",
+                      "[miscbeat][aide][end_time]" ]
+          concatenate_sources => true
+          # uses event.hash
+          ecs_compatibility => "v8"
+          method => "MURMUR3_128"
+          base64encode => true
+        }
+      }
+
+    } # if ([miscbeat][aide])
+
     if ([miscbeat][auditlog]) {
       #-------------------------------------------------
       # fluentbit tail of /var/log/audit/audit.log
