added dashboard for AIDE file integrity

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -90,20 +90,45 @@ filter {
           match => [ "[miscbeat][aide][end_time]", "yyyy-MM-dd HH:mm:ss Z" ]
           target => "[miscbeat][aide][end_time]"
         }
-        mutate { id => "muate_replace_beats_miscbeat_aide_end_time_timestamp"
+        mutate { id => "mutate_replace_beats_miscbeat_aide_end_time_timestamp"
                  replace => { "[@timestamp]" => "%{[miscbeat][aide][end_time]}" } }
       }
 
+      # set
+      if ([miscbeat][aide][details]) {
+        ruby {
+            id => "ruby_miscbeat_aide_details"
+            code => "
+                details = event.get('[miscbeat][aide][details]')
+                if !details.nil? and details.is_a?(Hash) && (details.length > 0) then
+                  event.set('[file][path]', details.keys)
+                  actions = Array.new
+                  actions.push('add') if (event.get('[miscbeat][aide][number_of_entries][added]').to_i > 0)
+                  actions.push('change') if (event.get('[miscbeat][aide][number_of_entries][changed]').to_i > 0)
+                  actions.push('remove') if (event.get('[miscbeat][aide][number_of_entries][removed]').to_i > 0)
+                  event.set('[event][action]', actions) unless (actions.length == 0)
+                end
+            "
+            # the "details" field is sufficient for what we need
+            remove_field => [
+             "[miscbeat][aide][added]",
+             "[miscbeat][aide][changed]",
+             "[miscbeat][aide][removed]" ]
+        }
+      }
+
+      if ([miscbeat][aide][outline]) { mutate { id => "mutate_rename_miscbeat_aide_outline"
+                                                rename => { "[miscbeat][aide][outline]" => "[event][result]" } } }
+
       if (![event][hash]) {
         fingerprint {
-          id => "fingerprint_malcolm_miscbeat_cpu"
+          id => "fingerprint_malcolm_miscbeat_aide"
           source => [ "[host][name]",
                       "[event][module]",
-                      "[miscbeat][aide][number_of_entries][total]",
                       "[miscbeat][aide][number_of_entries][added]",
                       "[miscbeat][aide][number_of_entries][removed]",
                       "[miscbeat][aide][number_of_entries][changed]",
-                      "[miscbeat][aide][outline]",
+                      "[event][result]",
                       "[miscbeat][aide][start_time]",
                       "[miscbeat][aide][end_time]" ]
           concatenate_sources => true
