--- a/sensor-iso/interface/sensor_ctl/supervisor.d/fluentbit-aide.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/fluentbit-aide.conf
@@ -5,6 +5,7 @@ command=/opt/fluent-bit/bin/fluent-bit
   -p "command= sudo /usr/local/bin/aide_integrity_check.sh"
   -p parser=json
   -p Interval_Sec=%(ENV_FLUENTBIT_AIDE_INTERVAL)s
+  -p Buf_Size=2mb
   -o tcp://localhost:%(ENV_MISCBEAT_PORT)s
   -p format=json_lines
   -F nest -p Operation=nest -p Nested_under=aide -p WildCard='*' -m '*'
