rework details for aide

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -94,7 +94,8 @@ filter {
                  replace => { "[@timestamp]" => "%{[miscbeat][aide][end_time]}" } }
       }
 
-      # set
+      # set action (changed, added, removed files/directories) and convert details hash to an array
+      # so we don't end up creating a new dynamically-mapped field for every single file/directory
       if ([miscbeat][aide][details]) {
         ruby {
             id => "ruby_miscbeat_aide_details"
@@ -102,6 +103,7 @@ filter {
                 details = event.get('[miscbeat][aide][details]')
                 if !details.nil? and details.is_a?(Hash) && (details.length > 0) then
                   event.set('[file][path]', details.keys)
+                  event.set('[miscbeat][aide][details]', details.map { |k, v| v.merge('path' => k) })
                   actions = Array.new
                   actions.push('add') if (event.get('[miscbeat][aide][number_of_entries][added]').to_i > 0)
                   actions.push('change') if (event.get('[miscbeat][aide][number_of_entries][changed]').to_i > 0)
