save timestamp, end_time and start_time for aide

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -74,7 +74,7 @@ filter {
       # fluentbit exec of AIDE
       # https://aide.github.io/
 
-      # parse AIDE run start_time
+      # parse AIDE run start_time and end_time
       if ([miscbeat][aide][start_time]) {
         date {
           id => "date_beats_miscbeat_aide_start_time"
@@ -82,16 +82,12 @@ filter {
           target => "[miscbeat][aide][start_time]"
         }
       }
-
-      # parse AIDE run end_time and save it over @timestamp
       if ([miscbeat][aide][end_time]) {
         date {
           id => "date_beats_miscbeat_aide_end_time"
           match => [ "[miscbeat][aide][end_time]", "yyyy-MM-dd HH:mm:ss Z" ]
           target => "[miscbeat][aide][end_time]"
         }
-        mutate { id => "mutate_replace_beats_miscbeat_aide_end_time_timestamp"
-                 replace => { "[@timestamp]" => "%{[miscbeat][aide][end_time]}" } }
       }
 
       # set action (changed, added, removed files/directories) and convert details hash to an array
