work in progress on AIDE details

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -90,39 +90,106 @@ filter {
         }
       }
 
-      # set action (changed, added, removed files/directories) and convert details hash to an array
-      # so we don't end up creating a new dynamically-mapped field for every single file/directory
+      # set action (changed, added, removed files/directories)
+      ruby {
+          id => "ruby_miscbeat_aide_action"
+          code => "
+            actions = Array.new
+            actions.push('add') if (event.get('[miscbeat][aide][number_of_entries][added]').to_i > 0)
+            actions.push('change') if (event.get('[miscbeat][aide][number_of_entries][changed]').to_i > 0)
+            actions.push('remove') if (event.get('[miscbeat][aide][number_of_entries][removed]').to_i > 0)
+            event.set('[event][action]', actions) unless (actions.length == 0)
+          "
+      }
+
+      # convert hashe of hashes to arrays of hashes so we don't end up creating a new
+      # dynamically-mapped field for every single file/directory
       if ([miscbeat][aide][details]) {
         ruby {
-            id => "ruby_miscbeat_aide_details"
-            code => "
-                details = event.get('[miscbeat][aide][details]')
-                if !details.nil? and details.is_a?(Hash) && (details.length > 0) then
-                  event.set('[file][path]', details.keys)
-                  event.set('[miscbeat][aide][details]', details.map { |k, v| v.merge('path' => k) })
-                  actions = Array.new
-                  actions.push('add') if (event.get('[miscbeat][aide][number_of_entries][added]').to_i > 0)
-                  actions.push('change') if (event.get('[miscbeat][aide][number_of_entries][changed]').to_i > 0)
-                  actions.push('remove') if (event.get('[miscbeat][aide][number_of_entries][removed]').to_i > 0)
-                  event.set('[event][action]', actions) unless (actions.length == 0)
-                end
-            "
-            # the "details" field is sufficient for what we need
-            remove_field => [
-             "[miscbeat][aide][added]",
-             "[miscbeat][aide][changed]",
-             "[miscbeat][aide][removed]" ]
+          id => "ruby_miscbeat_aide_details_hashform"
+          path => "/usr/share/logstash/malcolm-ruby/hashhash_to_hasharray.rb"
+          script_params => {
+            "source" => "[miscbeat][aide][details]"
+            "target_hash_array" => "[miscbeat][aide][details]"
+            "target_keys_array" => "[file][path]"
+            "name_key" => "path"
+          }
+        }
+      }
+      if ([miscbeat][aide][databases]) {
+        ruby {
+          id => "ruby_miscbeat_aide_databases_hashform"
+          path => "/usr/share/logstash/malcolm-ruby/hashhash_to_hasharray.rb"
+          script_params => {
+            "source" => "[miscbeat][aide][databases]"
+            "target_hash_array" => "[miscbeat][aide][databases]"
+            "name_key" => "path"
+          }
+        }
+      }
+      if ([miscbeat][aide][added]) {
+        ruby {
+          id => "ruby_miscbeat_aide_added_to_array"
+          path => "/usr/share/logstash/malcolm-ruby/hashhash_to_hasharray.rb"
+          script_params => {
+            "source" => "[miscbeat][aide][added]"
+            "target_keys_array" => "[miscbeat][aide][added]"
+          }
+        }
+      }
+      if ([miscbeat][aide][changed]) {
+        ruby {
+          id => "ruby_miscbeat_aide_changed_to_array"
+          path => "/usr/share/logstash/malcolm-ruby/hashhash_to_hasharray.rb"
+          script_params => {
+            "source" => "[miscbeat][aide][changed]"
+            "target_keys_array" => "[miscbeat][aide][changed]"
+          }
+        }
+      }
+      if ([miscbeat][aide][removed]) {
+        ruby {
+          id => "ruby_miscbeat_aide_removed_to_array"
+          path => "/usr/share/logstash/malcolm-ruby/hashhash_to_hasharray.rb"
+          script_params => {
+            "source" => "[miscbeat][aide][removed]"
+            "target_keys_array" => "[miscbeat][aide][removed]"
+          }
         }
       }
 
-      if ([miscbeat][aide][outline]) { mutate { id => "mutate_rename_miscbeat_aide_outline"
-                                                rename => { "[miscbeat][aide][outline]" => "[event][result]" } } }
+      # merge file.path to contain all related file names/paths
+      ruby {
+        id => "ruby_miscbeat_aide_merge_paths"
+        code => "
+          paths = event.get('[file][path]').to_a +
+                  event.get('[miscbeat][aide][added]').to_a +
+                  event.get('[miscbeat][aide][changed]').to_a +
+                  event.get('[miscbeat][aide][removed]').to_a
+          event.set('[file][path]', paths.uniq.flatten.compact) unless (paths.length == 0)
+        "
+      }
 
+      # rename miscbeat.aide.outline to event.result and translate clunky result messages
+      if ([miscbeat][aide][outline]) {
+        mutate { id => "mutate_rename_miscbeat_aide_outline"
+                 rename => { "[miscbeat][aide][outline]" => "[event][result]" } }
+        if ([event][result] =~ /^AIDE found NO differences/) {
+          mutate { id => "mutate_replace_miscbeat_aide_result_no_differences"
+                   replace => { "[event][result]" => "Success" } }
+        } else if ([event][result] =~ /^AIDE found differences/) {
+          mutate { id => "mutate_replace_miscbeat_aide_result_differences"
+                   replace => { "[event][result]" => "Failure" } }
+        }
+      }
+
+      # generate unique ID
       if (![event][hash]) {
         fingerprint {
           id => "fingerprint_malcolm_miscbeat_aide"
           source => [ "[host][name]",
                       "[event][module]",
+                      "[miscbeat][aide][number_of_entries][total]",
                       "[miscbeat][aide][number_of_entries][added]",
                       "[miscbeat][aide][number_of_entries][removed]",
                       "[miscbeat][aide][number_of_entries][changed]",
