I think I can replace protologbeat completely with filebeat and have less dependencies to maintain. work in progress, may be broken

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -50,7 +50,9 @@ filter {
 
   } else if ("_malcolm_miscbeat" in [tags]) {
     #############################################################################################################################
-    # misc. sensor metrics and logs from fluentbit received by protologbeat TCP
+    # misc. sensor metrics and logs from fluentbit received by filebeat TCP input
+    # https://docs.fluentbit.io/manual/
+    # https://www.elastic.co/guide/en/beats/filebeat/current/filebeat-input-tcp.html
 
     # set event.module to whatever we set "module" to when running fluentbit
     if ([miscbeat][module]) {
