index tweaks for sensor data

--- a/logstash/pipelines/beats/98_finalize.conf
+++ b/logstash/pipelines/beats/98_finalize.conf
@@ -108,12 +108,12 @@ filter {
     }
 
     # this field is used to determine opensearch index prefix
-    if ([agent][type]) {
-      mutate { id => "mutate_add_malcolm_beats_index_prefix_agent_type"
-               add_field => { "[@metadata][malcolm_opensearch_index_prefix]" => "malcolm_beats_%{[agent][type]}" } }
-    } else if ([event][module]) {
+    if ([event][module]) {
       mutate { id => "mutate_add_malcolm_beats_index_prefix_event_module"
                add_field => { "[@metadata][malcolm_opensearch_index_prefix]" => "malcolm_beats_%{[event][module]}" } }
+    } else if ([agent][type]) {
+      mutate { id => "mutate_add_malcolm_beats_index_prefix_agent_type"
+               add_field => { "[@metadata][malcolm_opensearch_index_prefix]" => "malcolm_beats_%{[agent][type]}" } }
     } else if ([input][type]) {
       mutate { id => "mutate_add_malcolm_beats_index_prefix_input_type"
                add_field => { "[@metadata][malcolm_opensearch_index_prefix]" => "malcolm_beats_%{[input][type]}" } }
