Work in progress for zeek and suricata live capture (squashed commit) see idaholab/Malcolm#109
commit 30ab5eb09e12a52fa8b6049169d25ac201490ab6
Author: SG <mero.mero.guero@gmail.com>
Date:   Wed Jul 27 11:40:48 2022 -0600

    work in progress for zeek- and suricata- live capture (idaholab/Malcolm#109)

commit dda60d73031279006e20cee351db381eab6f7ae6
Author: SG <mero.mero.guero@gmail.com>
Date:   Wed Jul 27 11:40:30 2022 -0600

    work in progress for zeek- and suricata- live capture (idaholab/Malcolm#109)

commit b08e3e7039ad74fa03502af0baf924f1198fc1fb
Author: SG <mero.mero.guero@gmail.com>
Date:   Wed Jul 27 10:39:08 2022 -0600

    work in progress for zeek- and suricata- live capture (idaholab/Malcolm#109)

commit 51c8e045b6be0d60ec031649154bb511e71a2172
Author: Seth Grover <mero.mero.guero@gmail.com>
Date:   Wed Jul 27 08:26:01 2022 -0600

    work in progress for zeek- and suricata- live capture (idaholab/Malcolm#109)

commit 35da23a4c6d5a431be54ec345d00785a1d9d70be
Author: Seth Grover <mero.mero.guero@gmail.com>
Date:   Wed Jul 27 07:00:47 2022 -0600

    work in progress for zeek- and suricata- live capture (idaholab/Malcolm#109)

commit b6c99f94e07031ab73657d582eed9dc00f4dea8f
Author: Seth Grover <mero.mero.guero@gmail.com>
Date:   Tue Jul 26 17:17:19 2022 -0600

    work in progress for zeek- and suricata- live capture (idaholab/Malcolm#109)

commit ce9149e972725958f449da7503dfcd74bdffd642
Author: Seth Grover <mero.mero.guero@gmail.com>
Date:   Tue Jul 26 16:30:22 2022 -0600

    work in progress for zeek- and suricata- live capture (idaholab/Malcolm#109)

commit 3aec8b5db877a20a763bed4d18fa57520dd394eb
Author: Seth Grover <mero.mero.guero@gmail.com>
Date:   Tue Jul 26 16:08:37 2022 -0600

    work in progress for zeek- and suricata- live capture (idaholab/Malcolm#109)

commit a9fe5b22f0404f0c51b592c23bb0581764abc967
Author: Seth Grover <mero.mero.guero@gmail.com>
Date:   Tue Jul 26 15:49:58 2022 -0600

    work in progress for zeek- and suricata- live ca

--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -167,7 +167,7 @@ x-pcap-capture-variables: &pcap-capture-variables
 
 services:
   opensearch:
-    image: malcolmnetsec/opensearch:6.1.1
+    image: malcolmnetsec/opensearch:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -206,7 +206,7 @@ services:
       retries: 3
       start_period: 180s
   dashboards-helper:
-    image: malcolmnetsec/dashboards-helper:6.1.1
+    image: malcolmnetsec/dashboards-helper:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -234,7 +234,7 @@ services:
       retries: 3
       start_period: 30s
   dashboards:
-    image: malcolmnetsec/dashboards:6.1.1
+    image: malcolmnetsec/dashboards:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -257,7 +257,7 @@ services:
       retries: 3
       start_period: 210s
   logstash:
-    image: malcolmnetsec/logstash-oss:6.1.1
+    image: malcolmnetsec/logstash-oss:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -302,7 +302,7 @@ services:
       retries: 3
       start_period: 600s
   filebeat:
-    image: malcolmnetsec/filebeat-oss:6.1.1
+    image: malcolmnetsec/filebeat-oss:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -316,6 +316,7 @@ services:
       << : *common-upload-variables
       << : *common-beats-variables
       FILEBEAT_ZEEK_LOG_PATH : '/data/zeek/current'
+      FILEBEAT_ZEEK_LOG_LIVE_PATH : '/data/zeek/live'
       FILEBEAT_SURICATA_LOG_PATH : '/data/suricata'
       FILEBEAT_NGINX_LOG_PATH : '/data/nginx'
     depends_on:
@@ -338,7 +339,7 @@ services:
       retries: 3
       start_period: 60s
   arkime:
-    image: malcolmnetsec/arkime:6.1.1
+    image: malcolmnetsec/arkime:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -378,7 +379,7 @@ services:
       retries: 3
       start_period: 210s
   zeek:
-    image: malcolmnetsec/zeek:6.1.1
+    image: malcolmnetsec/zeek:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -409,7 +410,7 @@ services:
       retries: 3
       start_period: 60s
   suricata:
-    image: malcolmnetsec/suricata:6.1.1
+    image: malcolmnetsec/suricata:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -434,7 +435,7 @@ services:
       retries: 3
       start_period: 120s
   file-monitor:
-    image: malcolmnetsec/file-monitor:6.1.1
+    image: malcolmnetsec/file-monitor:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -459,7 +460,7 @@ services:
       retries: 3
       start_period: 60s
   pcap-capture:
-    image: malcolmnetsec/pcap-capture:6.1.1
+    image: malcolmnetsec/pcap-capture:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -479,7 +480,7 @@ services:
     volumes:
       - ./pcap/upload:/pcap
   pcap-monitor:
-    image: malcolmnetsec/pcap-monitor:6.1.1
+    image: malcolmnetsec/pcap-monitor:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -504,7 +505,7 @@ services:
       retries: 3
       start_period: 90s
   upload:
-    image: malcolmnetsec/file-upload:6.1.1
+    image: malcolmnetsec/file-upload:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -532,7 +533,7 @@ services:
       retries: 3
       start_period: 60s
   htadmin:
-    image: malcolmnetsec/htadmin:6.1.1
+    image: malcolmnetsec/htadmin:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -556,7 +557,7 @@ services:
       retries: 3
       start_period: 60s
   freq:
-    image: malcolmnetsec/freq:6.1.1
+    image: malcolmnetsec/freq:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -576,7 +577,7 @@ services:
       retries: 3
       start_period: 60s
   name-map-ui:
-    image: malcolmnetsec/name-map-ui:6.1.1
+    image: malcolmnetsec/name-map-ui:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -599,7 +600,7 @@ services:
       retries: 3
       start_period: 60s
   api:
-    image: malcolmnetsec/api:6.1.1
+    image: malcolmnetsec/api:6.2.0
     command: gunicorn --bind 0:5000 manage:app
     restart: "no"
     stdin_open: false
@@ -619,7 +620,7 @@ services:
       retries: 3
       start_period: 60s
   nginx-proxy:
-    image: malcolmnetsec/nginx-proxy:6.1.1
+    image: malcolmnetsec/nginx-proxy:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
