--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -170,7 +170,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/opensearch.Dockerfile
-    image: malcolmnetsec/opensearch:6.1.1
+    image: malcolmnetsec/opensearch:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -212,7 +212,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/dashboards-helper.Dockerfile
-    image: malcolmnetsec/dashboards-helper:6.1.1
+    image: malcolmnetsec/dashboards-helper:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -243,7 +243,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/dashboards.Dockerfile
-    image: malcolmnetsec/dashboards:6.1.1
+    image: malcolmnetsec/dashboards:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -269,7 +269,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/logstash.Dockerfile
-    image: malcolmnetsec/logstash-oss:6.1.1
+    image: malcolmnetsec/logstash-oss:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -321,7 +321,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/filebeat.Dockerfile
-    image: malcolmnetsec/filebeat-oss:6.1.1
+    image: malcolmnetsec/filebeat-oss:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -335,6 +335,7 @@ services:
       << : *common-upload-variables
       << : *common-beats-variables
       FILEBEAT_ZEEK_LOG_PATH : '/data/zeek/current'
+      FILEBEAT_ZEEK_LOG_LIVE_PATH : '/data/zeek/live'
       FILEBEAT_SURICATA_LOG_PATH : '/data/suricata'
       FILEBEAT_NGINX_LOG_PATH : '/data/nginx'
     depends_on:
@@ -360,7 +361,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/arkime.Dockerfile
-    image: malcolmnetsec/arkime:6.1.1
+    image: malcolmnetsec/arkime:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -406,7 +407,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/zeek.Dockerfile
-    image: malcolmnetsec/zeek:6.1.1
+    image: malcolmnetsec/zeek:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -441,7 +442,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/suricata.Dockerfile
-    image: malcolmnetsec/suricata:6.1.1
+    image: malcolmnetsec/suricata:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -469,7 +470,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/file-monitor.Dockerfile
-    image: malcolmnetsec/file-monitor:6.1.1
+    image: malcolmnetsec/file-monitor:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -497,7 +498,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/pcap-capture.Dockerfile
-    image: malcolmnetsec/pcap-capture:6.1.1
+    image: malcolmnetsec/pcap-capture:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -520,7 +521,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/pcap-monitor.Dockerfile
-    image: malcolmnetsec/pcap-monitor:6.1.1
+    image: malcolmnetsec/pcap-monitor:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -548,7 +549,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/file-upload.Dockerfile
-    image: malcolmnetsec/file-upload:6.1.1
+    image: malcolmnetsec/file-upload:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -576,7 +577,7 @@ services:
       retries: 3
       start_period: 60s
   htadmin:
-    image: malcolmnetsec/htadmin:6.1.1
+    image: malcolmnetsec/htadmin:6.2.0
     build:
       context: .
       dockerfile: Dockerfiles/htadmin.Dockerfile
@@ -603,7 +604,7 @@ services:
       retries: 3
       start_period: 60s
   freq:
-    image: malcolmnetsec/freq:6.1.1
+    image: malcolmnetsec/freq:6.2.0
     build:
       context: .
       dockerfile: Dockerfiles/freq.Dockerfile
@@ -626,7 +627,7 @@ services:
       retries: 3
       start_period: 60s
   name-map-ui:
-    image: malcolmnetsec/name-map-ui:6.1.1
+    image: malcolmnetsec/name-map-ui:6.2.0
     build:
       context: .
       dockerfile: Dockerfiles/name-map-ui.Dockerfile
@@ -652,7 +653,7 @@ services:
       retries: 3
       start_period: 60s
   api:
-    image: malcolmnetsec/api:6.1.1
+    image: malcolmnetsec/api:6.2.0
     build:
       context: .
       dockerfile: Dockerfiles/api.Dockerfile
@@ -678,7 +679,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/nginx.Dockerfile
-    image: malcolmnetsec/nginx-proxy:6.1.1
+    image: malcolmnetsec/nginx-proxy:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
